--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,7 +68,8 @@
   .table_preview {
     width: 300px;
     height: 300px;
-    overflow: hidden;
+    display: table;
+    background-color: black;
   }
 
   .zones img {
